# mpc

./: .env.test  .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: check.yml
crates/skw-auth-service/: Cargo.toml
crates/skw-auth-service/email-auth-code-storage/: LOG  LOG.old
crates/skw-auth-service/src/: email.rs  env.rs  lib.rs  main.rs  util.rs
crates/skw-auth-service/src/routes/: email.rs  ga.rs  mod.rs  oauth.rs  usage.rs
crates/skw-mpc-auth/: Cargo.toml
crates/skw-mpc-auth/src/: auth.rs  code.rs  email.rs  ga.rs  lib.rs  types.rs  utils.rs
crates/skw-mpc-auth/src/ownership/: email.rs  ga_token.rs  mod.rs  oauth.rs
crates/skw-mpc-auth/src/proof/: ed25519.rs  ga.rs  jwe.rs  mod.rs
crates/skw-mpc-auth/src/usage/: mod.rs  mpc.rs
crates/skw-mpc-client/: Cargo.toml
crates/skw-mpc-client/examples/: node_full.rs  node_light.rs
crates/skw-mpc-client/src/: error.rs
crates/skw-mpc-client/src/swarm/: behavior.rs  client.rs  event_loop.rs  mod.rs
crates/skw-mpc-email-server/email-auth-code-storage/: LOG
crates/skw-mpc-node/: Cargo.toml
crates/skw-mpc-node/examples/: node_client.rs  node_full.rs  node_light.rs
crates/skw-mpc-node/src/: behavior.rs  client.rs  error.rs  event_loop.rs  job_manager.rs  lib.rs  node.rs  serde_support.rs
crates/skw-mpc-node/src/binaries/: node_client.rs  node_light.rs  node_mpc.rs  node_test.rs
crates/skw-mpc-node/src/node/: behavior.rs  client.rs  client_outcome.rs  client_request.rs  event_loop.rs  full.rs  job_manager.rs  light.rs  mod.rs
crates/skw-mpc-node/src/node/full/: event_loop.rs  job_manager.rs  mod.rs
crates/skw-mpc-node/src/node/light/: event_loop.rs  job_manager.rs  mod.rs
crates/skw-mpc-node/src/swarm/: behavior.rs  client.rs  event_loop.rs  mod.rs
crates/skw-mpc-payload/: Cargo.toml
crates/skw-mpc-payload/src/: auth_header.rs  env.rs  header.rs  lib.rs
crates/skw-mpc-protocol/: Cargo.toml
crates/skw-mpc-protocol/examples/: gg20_keygen.rs  gg20_signing.rs  gg20_sm_client.rs  gg20_sm_manager.rs
crates/skw-mpc-protocol/src/: lib.rs
crates/skw-mpc-protocol/src/gg20/: blame.rs  mod.rs  party_i.rs  test.rs
crates/skw-mpc-protocol/src/gg20/state_machine/: keygen.rs  sign.rs
crates/skw-mpc-protocol/src/gg20/state_machine/keygen/: rounds.rs
crates/skw-mpc-protocol/src/gg20/state_machine/sign/: fmt.rs  rounds.rs
crates/skw-mpc-protocol/src/key_refresh/: refresh_message.rs  test.rs
crates/skw-mpc-protocol/src/utilities/: mod.rs
crates/skw-mpc-protocol/src/utilities/mta/: mod.rs  range_proofs.rs  test.rs
crates/skw-mpc-protocol/src/utilities/zk_pdl/: mod.rs  test.rs
crates/skw-mpc-protocol/src/utilities/zk_pdl_with_slack/: mod.rs  test.rs
crates/skw-mpc-pubsub/: Cargo.toml
crates/skw-mpc-pubsub/examples/: keygen.rs  server.rs
crates/skw-mpc-pubsub/src/: behavior.rs  client.rs  error.rs  event_loop.rs  lib.rs  main.rs  node.rs
crates/skw-mpc-pubsub/src/node/: mod.rs
crates/skw-mpc-storage/: Cargo.toml
crates/skw-mpc-storage/src/: db.rs  leveldb.rs  lib.rs  types.rs
crates/skw-mpc-wasm/: Cargo.toml  index.js
crates/skw-mpc-wasm/build-wasm/: skw_mpc_wasm.d.ts  skw_mpc_wasm.js  skw_mpc_wasm_opt.wasm
crates/skw-mpc-wasm/src/: lib.rs
crates/skw-round-based/: Cargo.toml
crates/skw-round-based/src/: lib.rs
crates/skw-round-based/src/async_runtime/: mod.rs
crates/skw-round-based/src/dev/: async_simulation.rs  simulation.rs
crates/skw-round-based/tests/silly_protocol/: mod.rs  rounds.rs
crypto/skw-crypto-bulletproofs/: Cargo.toml
crypto/skw-crypto-bulletproofs/benches/: range_proof.rs
crypto/skw-crypto-bulletproofs/src/: lib.rs
crypto/skw-crypto-bulletproofs/src/proofs/: inner_product.rs  range_proof.rs
crypto/skw-crypto-centipede/: Cargo.toml
crypto/skw-crypto-centipede/benches/: v_backup.rs
crypto/skw-crypto-centipede/src/: wallet.rs
crypto/skw-crypto-centipede/src/grad_release/: mod.rs
crypto/skw-crypto-centipede/src/juggling/: proof_system.rs  segmentation.rs
crypto/skw-crypto-curv/examples/: pedersen_commitment.rs  proof_of_knowledge_of_dlog.rs
crypto/skw-crypto-paillier/examples/: core.rs  simple-voting.rs
crypto/skw-crypto-paillier/src/: core.rs  serialize.rs
crypto/skw-crypto-zk-paillier/: Cargo.toml
crypto/skw-crypto-zk-paillier/src/: serialize.rs
crypto/skw-crypto-zk-paillier/src/zkproofs/: mod.rs
scripts/: copy-examples.cjs  gen-env.cjs  main-ci.cjs  main-test.cjs  pack-wasm.cjs  start-all.cjs
src/crates/skw-mpc-auth/: Cargo.toml
src/crates/skw-mpc-node/: Cargo.toml
src/crates/skw-mpc-protocol/: Cargo.toml
src/crates/skw-mpc-wasm/: Cargo.toml
src/crypto/skw-crypto-curv/: Cargo.toml
src/crypto/skw-crypto-curv/examples/: diffie_hellman_key_exchange.rs  verifiable_secret_sharing.rs
src/crypto/skw-crypto-curv/src/arithmetic/: errors.rs  traits.rs
src/crypto/skw-crypto-curv/src/cryptographic_primitives/secret_sharing/: feldman_vss.rs
src/crypto/skw-crypto-curv/src/elliptic/curves/: mod.rs
src/crypto/skw-crypto-curv/src/elliptic/curves/wrappers/: point.rs
src/crypto/skw-crypto-paillier/: Cargo.toml
src/crypto/skw-crypto-paillier/benches/: arith.rs  encryption.rs  keygen.rs
src/crypto/skw-crypto-paillier/examples/: basic.rs  packed.rs
src/crypto/skw-crypto-paillier/src/: keygen.rs  lib.rs
src/crypto/skw-crypto-paillier/src/encoding/: integral.rs
src/full-node/skw-mpc-full-node/: Cargo.toml
src/full-node/skw-mpc-full-node/examples/: node_full.rs
src/full-node/skw-mpc-full-node/src/: client.rs  job_manager.rs  lib.rs  node.rs
src/full-node/skw-mpc-full-swarm/: Cargo.toml
src/light-node/skw-mpc-light-node/: Cargo.toml
src/light-node/skw-mpc-light-node/examples/: node_light.rs
src/light-node/skw-mpc-light-node/src/: client.rs  job_manager.rs  lib.rs  node.rs
src/light-node/skw-mpc-light-swarm/: Cargo.toml
src/light-node/skw-mpc-light-swarm/src/: event_loop.rs  lib.rs
src/storage/skw-mpc-leveldb/: Cargo.toml
src/storage/skw-mpc-leveldb/src/: lib.rs
src/storage/skw-mpc-storage/: Cargo.toml
src/storage/skw-mpc-storage/src/: db.rs  lib.rs  types.rs
(+48 files in other folders)
