[workspace]
members = [
    'src/full-node/skw-mpc-full-node',
    'src/full-node/skw-mpc-full-swarm',

    'src/light-node/skw-mpc-light-node',
    'src/light-node/skw-mpc-light-swarm',

    'src/crates/skw-mpc-payload',
    'src/crates/skw-mpc-auth',
    'src/crates/skw-mpc-payload',
    'src/crates/skw-mpc-protocol',
    'src/crates/skw-round-based',
    'src/crates/skw-mpc-node',

    'src/crypto/skw-crypto-curv',
    'src/crypto/skw-crypto-paillier',
    'src/crypto/skw-crypto-zk-paillier',

    'src/storage/skw-mpc-storage',
    'src/storage/skw-mpc-leveldb',

    'src/bin/skw-auth-service',
    'src/bin/skw-mpc-node-bin',
    'src/bin/skw-mpc-client-bin',
]

exclude = []

[profile.release]
panic = 'unwind'
