[package]
name = "skw-auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"
skw-mpc-storage = { path="../skw-mpc-storage" }
skw-mpc-auth = { path="../skw-mpc-auth" }
serde_json = "1.0.91"
rand = "0.8.5"
hmac-sha1 = "0.1.3"
blake2 = "0.10.6"
http = "0.2.8"
reqwest = "0.11.14"
