[package]
name = "skw-mpc-auth"
version = "0.1.7"
edition = "2021"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
license = "GPL-3.0"
description = "generic auth schema used by SkyeKiwi Mpc"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
base32 = "0.4.0"
hmac-sha1 = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
blake2 = { version = "0.10.6", default-features = false }
ed25519-dalek = "1.0.1"
serde_json = "1.0.93"
hex = "0.4.3"
rand = "0.8.5"
hkdf = "0.12.3"
sha2 = "0.10.6"
josekit = "0.8.2"