[package]
name = "skw-mpc-node"
version = "0.1.7"
edition = "2021"
authors = ["Song Zhou <song.zhou@skye.kiwi>"]
license = "GPL-3.0"
description = "Mpc pubsub implmenetation"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
skw-mpc-storage = { path = "../skw-mpc-storage" }
skw-mpc-payload = { path = "../skw-mpc-payload" }
skw-mpc-protocol = { path = "../skw-mpc-protocol" }
skw-round-based = { path = "../skw-round-based" }

blake2 = { version = "0.10.6", default-features = false }

serde = { version = "1.0", features = ["derive"], default-features = false }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.51.0", features = ["serde", "kad", "request-response", "identify", "macros", "tcp", "noise", "mplex", "async-std", "yamux"]}
futures = "0.3.1"
async-trait = "0.1.61"

async-std = { version = "1.12.0", default-features = false, features = ["alloc", "attributes", "std"] }
clap = { version = "3.1.16", features = ["derive"] }
void = "*"
curv-kzen = { version = "0.9", default-features = false }
ed25519-dalek = "1.0.1"
serde_json = "1.0"
bincode = "1.3.3"

# for wasm32-unknown-unknown
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[dev-dependencies]

[[bin]]
name = "node-light"
path = "src/binaries/node_light.rs"

[[bin]]
name = "node-client"
path = "src/binaries/node_client.rs"
