[package]
name = "skw-mpc-node"
version = "0.1.7"
edition = "2021"
authors = ["Song Zhou <song.zhou@skye.kiwi>"]
license = "GPL-3.0"
description = "Mpc pubsub implmenetation"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
skw-mpc-storage = { path = "../skw-mpc-storage", optional = true}
skw-mpc-payload = { path = "../skw-mpc-payload" }
skw-mpc-protocol = { path = "../skw-mpc-protocol" }
skw-round-based = { path = "../skw-round-based" }

blake2 = { version = "0.10.6", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }

libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.51.0", features = ["serde", "request-response", "macros", "noise", "mplex", "yamux", "async-std"]}

futures = "0.3.1"
async-trait = "0.1.61"

async-std = { version = "1.12.0", default-features = false, features = ["alloc", "attributes"] }
curv-kzen = { version = "0.9", default-features = false }
ed25519-dalek = "1.0.1"
serde_json = "1.0"
bincode = "1.3.3"

wasm-bindgen-futures = { version = "0.4.34", optional = true }
getrandom = { version = "0.2", default-features = false, optional = true}
signature = "^1.5"

[dev-dependencies]

[features]
default = ["light", "webrtc-transport"]

tcp-ws-transport = ["libp2p/tcp", "libp2p/websocket"]
webrtc-transport = ["libp2p/webrtc", "libp2p/tokio"]
wasm = ["wasm-bindgen-futures", "libp2p/wasm-ext", "libp2p/wasm-bindgen", "getrandom/js"]

full = ["skw-mpc-storage"]
light = ["wasm"]

[[example]]
name = "node-client"
path = "examples/node_client.rs"
required-features = ["light", "webrtc-transport"]

[[example]]
name = "node-full"
path = "examples/node_full.rs"
required-features = ["full", "tcp-ws-transport"]
