[package]
name = "skw-mpc-node"
version = "0.1.7"
edition = "2021"
authors = ["Song Zhou <song.zhou@skye.kiwi>"]
license = "GPL-3.0"
description = "Mpc pubsub implmenetation"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
skw-crypto-curv = { path = "../../crypto/skw-crypto-curv", default-features = false}
skw-mpc-storage = { path = "../skw-mpc-storage", optional = true}
skw-mpc-protocol = { path = "../skw-mpc-protocol" }
skw-mpc-payload = { path = "../skw-mpc-payload" }
skw-mpc-auth = { path = "../skw-mpc-auth" }
skw-round-based = { path = "../skw-round-based" }

libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.51.0", features = ["serde", "request-response", "macros", "noise", "mplex", "yamux", "tokio"]}
tokio = { version = "1.25", default-features = false, features = ["rt", "macros"] }

thiserror = { version = "1.0.23", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
futures = "0.3.1"
async-trait = "0.1.61"
ed25519-dalek = "1.0.1"
serde_json = "1.0"
bincode = "1.3.3"
rand = "0.8"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[features]
default = ["full-node", "tcp-ws-transport"]
tcp-ws-transport = ["libp2p/tcp", "libp2p/websocket", "tokio/rt-multi-thread"]

full-node = ["skw-mpc-storage"]
light-node = []

[[example]]
name = "node-light-node"
path = "examples/node_light.rs"
required-features = ["light-node", "tcp-ws-transport"]

[[example]]
name = "node-full-node"
path = "examples/node_full.rs"
required-features = ["full-node", "tcp-ws-transport"]
