[package]
name = "skw-mpc-payload"
version = "0.1.7"
edition = "2021"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
license = "GPL-3.0"
description = "generic payload between mpc nodes"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false, optional = true}
skw-mpc-auth = {path = "../skw-mpc-auth"}
libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.51.0", features = ["identify", "serde"]}
dotenv = "0.15.0"
hex = "0.4.3"

[dev-dependencies]
bincode = "1.3.3"

[features]
default = ["serde"]
serde = ["serde/derive"]
