[package]
name = "skw-mpc-protocol"
version = "0.8.1"
edition = "2021"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>",
    "Song Zhou <song.zhou@skye.kiwi>",
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[features]
default = ["curv-kzen/num-bigint"]
cclst = ["class_group"]

[dependencies]
skw-round-based = { path = "../skw-round-based" }

subtle = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
zeroize = { version = "1", default-features = false }
curv-kzen = { version = "0.9", default-features = false }
centipede = { version = "0.3", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }
thiserror = { version = "1.0.23", default-features = false }
derivative = { version = "2", default-features = false }
sha2 = { version = "0.9", default-features = false}

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.class_group]
version = "0.6"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
skw-round-based = { path = "../skw-round-based", features = ["dev"]}

thiserror = "1.0.23"
