[package]
name = "skw-mpc-protocol"
version = "0.8.1"
edition = "2021"
authors = [
    "Gary <gary@kzencorp.com>",
    "Omer <omer.shlomovits@gmail.com>",
    "Song Zhou <song.zhou@skye.kiwi>",
]
keywords = [
    "ecdsa",
    "multi-party-ecdsa",
    "signature",
    "rust",
    "secret-shares",
    "blockchain",
    "cryptography",
    "cryptocurrency"
]

homepage = "https://github.com/KZen-networks/multi-party-ecdsa"
repository = "https://github.com/KZen-networks/multi-party-ecdsa"
license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
skw-round-based = { path = "../skw-round-based" }

subtle = { version = "2", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
zeroize = { version = "1", default-features = false }

skw-crypto-curv = { path = "../../crypto/skw-crypto-curv", default-features = false, features = ["secp256k1", "verifiable_ss"] }
skw-crypto-paillier = { path = "../../crypto/skw-crypto-paillier" }
skw-crypto-centipede = { path = "../../crypto/skw-crypto-centipede" }
skw-crypto-zk-paillier = { path = "../../crypto/skw-crypto-zk-paillier" }

thiserror = { version = "1.0.23", default-features = false }
# derivative = { version = "2", default-features = false }
sha2 = { version = "0.9", default-features = false}

[dev-dependencies]
secp256k1 = { version = "0.20", features = ["global-context"]}
skw-round-based = { path = "../skw-round-based", features = ["dev"]}
serde_json = "1.0"

[features]
default = []
