[package]
name = "skw-mpc-pubsub"
version = "0.1.7"
edition = "2021"
authors = ["Song Zhou <song.zhou@skye.kiwi>"]
license = "GPL-3.0"
description = "Mpc pubsub implmenetation"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
libp2p = { version = "0.50.0", features = ["gossipsub", "identify", "mdns", "macros", "tcp", "dns", "websocket", "noise", "mplex", "yamux", "async-std"]}
futures = "0.3.1"
async-std = { version = "1.6.2", features = ["attributes"] }
serde = "1.0.151"
serde_derive = "1.0.151"
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["macros"] }
async-stream = "0.3.3"

[dev-dependencies]
criterion = "0.3"
aes-gcm = "0.9.4"
hex = "0.4"
tokio = { version = "1", default-features = false, features = ["macros"] }
futures = "0.3"
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
reqwest = { version = "0.9", default-features = false }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
rand = "0.8"
surf = "2"
async-sse = "5"
anyhow = "1"
structopt = "0.3"
secp256k1 = { version = "0.20", features = ["global-context"]}
skw-round-based = { path = "../skw-round-based", features = ["dev"]}
