[package]
name = "skw-mpc-pubsub"
version = "0.1.7"
edition = "2021"
authors = ["Song Zhou <song.zhou@skye.kiwi>"]
license = "GPL-3.0"
description = "Mpc pubsub implmenetation"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }
libp2p = { version = "0.50.0", features = ["gossipsub", "identify", "mdns", "macros", "tcp", "dns", "websocket", "noise", "mplex", "yamux", "async-std"]}
futures = "0.3.1"
anyhow = "1"
tokio = { version = "1", default-features = false, features = ["macros", "sync", "io-std"] }
async-stream = "0.3.3"

[dev-dependencies]
