[package]
name = "skw-mpc-pubsub"
version = "0.1.7"
edition = "2021"
authors = ["Song Zhou <song.zhou@skye.kiwi>"]
license = "GPL-3.0"
description = "Mpc pubsub implmenetation"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.51.0", features = ["floodsub", "identify", "mdns", "macros", "tcp", "noise", "mplex", "async-std", "yamux"]}
futures = "0.3.1"
anyhow = "1"

async-std = { version = "1.12.0", default-features = false, features = ["alloc", "attributes", "unstable", "std"] }
void = { version = "*" }

[dev-dependencies]
