[package]
name = "skw-mpc-wasm"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
skw-mpc-node = {path = "../skw-mpc-node", default-features = false, features = ["light-node", "tcp-ws-transport"]}
skw-mpc-payload = { path = "../skw-mpc-payload" }
futures = "0.3.1"
wasm-bindgen-futures = "0.4.34"
serde_json = "1.0"
console_error_panic_hook = "0.1.7"