[package]
name = "skw-mpc-wasm"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
skw-mpc-client = {path = "../skw-mpc-client", default-features = false, features = ["light-node", "wasm-transport"]}
skw-mpc-payload = { path = "../skw-mpc-payload" }

futures = "0.3.1"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"

rand = { version = "0.8" }