[package]
name = "skw-round-based"
version = "0.1.7"
edition = "2021"
authors = ["Denis Varlakov <dsurv@yandex.ru>"]
license = "GPL-3.0"
description = "Driver for round-based protocols"
repository = "https://github.com/ZenGo-X/round-based-protocol"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

skw-mpc-payload = { path = "../skw-mpc-payload" }
libp2p = { git = "https://github.com/libp2p/rust-libp2p", version = "0.51.0", features = ["identify", "serde"]}

tokio = { version = "1.25", features = ["rt", "sync", "time"], optional = true }
futures = { version = "0.3.9", optional = true }
async-stream = { version = "0.3.0", optional = true }
thiserror = "1.0.23"
log = "0.4.14"

[dev-dependencies]
tokio = { version = "1.25", features = ["rt", "sync", "time", "macros"] }
sha2 = "0.9.2"
rand = "0.8.1"
env_logger = "0.9.0"

[features]
default = ["async-runtime"]
async-runtime = ["tokio", "futures", "async-stream"]
# Exposes utils useful for testing
dev = []

[[test]]
name = "simulate_silly_protocol"
required-features = ["dev", "async-runtime"]
