[package]
name = "skw-crypto-bulletproofs"
version = "1.2.1"
edition = "2021"
authors = [
    "Omer Shlomovits <omer@kzencorp.com>",
    "Suyash Bagad <suyashnbagad1997@gmail.com>",
    "Song Zhou <song.zhou@skye.kiwi>",
]
license = "GPL-3.0"
description = "Implementation of Bulletproofs and Bulletproofs+ aggregated range proofs with multi-exponent verification"
repository = "https://github.com/ZenGo-X/bulletproofs"
categories = ["cryptography", "algorithms"]
keywords = ["cryptography", "crypto", "zero-knowledge", "bulletproofs"]

[lib]
name = "skw_crypto_bulletproofs"
crate-type = ["lib"]

[dependencies]
skw-crypto-curv = { path = "../skw-crypto-curv", default-features = false, features = ["secp256k1"]}
serde = { version = "1.0", features = ["derive"], default-features = false }

itertools = "0.7.8"
sha2 = "0.9"
generic-array = "0.14"

[dev-dependencies]
criterion = "0.2"

[features]
default = []

[[bench]]
name = "range_proof"
path = "benches/range_proof.rs"
harness = false
