[package]
name = "skw-crypto-zk-paillier"
version = "0.4.4"
edition = "2021"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>",
    "Song Zhou <song.zhou@skye.kiwi>",
]

[lib]
crate-type = ["lib"]

[dependencies]
skw-crypto-curv = { path = "../skw-crypto-curv", default-features = false}
skw-crypto-paillier = { path = "../skw-crypto-paillier", default-features = false}

rand = "0.6"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.9"
digest = "0.9"
thiserror = "1"

[dev-dependencies]
criterion = "0.3"

[features]
default = []

# [[bench]]
# name = "all"
# harness = false
