[package]
name = "skw-crypto-paillier"
version = "0.4.3"
edition = "2021"
description = "Efficient pure-Rust library for the Paillier partially homomorphic encryption scheme"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ZenGo-X/rust-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

[dependencies]
skw-crypto-curv = { path = "../skw-crypto-curv", default-features = false}
serde = { version = "1.0", features = ["derive"], default-features = false}
rayon = "1.1"

[dev-dependencies]
bencher = "0.1"
serde_json = "1.0"
rand = "0.6"

[features]
default = []

[[bench]]
name = "arith"
harness = false

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "keygen"
harness = false

[[example]]
name = "basic"

[[example]]
name = "core"

[[example]]
name = "packed"

[[example]]
name = "simple-voting"
