[package]
name = "skw-mpc-leveldb"
version = "0.1.7"
edition = "2021"
authors = ["SkyeKiwi <hello@skye.kiwi>"]
license = "GPL-3.0"
description = "storage abstraction for SkyeKiwi Mpc nodes"
categories = ["asynchronous", "cryptography", "network-programming"]
keywords = ["round-based", "mpc", "protocol"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
skw-mpc-storage = { path = "../skw-mpc-storage" }
tokio = { version = "1.25", default-features = false, features = ["rt", "macros"] }

serde = { version = "1.0", features = ["derive"], default-features = false }
rusty-leveldb = { version = "1.0.6", default-features = false, optional = true}
futures = "0.3.1"

[features]
default = ["leveldb-backend"]
leveldb-backend = ["rusty-leveldb"]
localstorage-backend = []